[package]
name = "mini_async_http"
version = "0.0.1"
authors = ["Lucas Matteo"]
edition = "2018"
license-file = "./LICENSE"
description = "Mini async http server based on mio"
repository = "https://github.com/LMatteo/mini-async-http"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version="0.7", features = ["os-poll", "tcp", "os-util"]}
log = "0.4"
httparse = "1.3.4"

[dev-dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
lazy_static = "1.4.0"